Update .gitignore to include .venv and .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wheels/
 venv/
 env/
 ENV/
+.venv/
 
 # IDE
 .idea/
@@ -61,4 +62,7 @@ output/
 htmlcov/
 
 # Jupyter Notebook
-.ipynb_checkpoints 
+.ipynb_checkpoints
+
+# OS specific
+.DS_Store 
