refactor: update project structure and files - Remove old data files and unused modules - Add new data files (SHassets.xlsx, SHWorkOrders.xlsx) - Add data_cleaner.py - Update dashboard.py - Add .gitignore for better file management

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Excel temporary files
+~$*.xlsx
+~$*.xls
+
+# Log files
+*.log
+
 # Python
 __pycache__/
 *.py[cod]
@@ -34,7 +41,6 @@ ENV/
 
 # Project specific
 config.py
-.env
 *.log
 data/
 utilization_cache.csv
